# PaddleLite-generic-demo

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  build_and_run_all_demo.sh  build_and_update_libs.sh
image_classification_demo/assets/datasets/test/: list.txt
image_classification_demo/assets/images/: tabby_cat.raw
image_classification_demo/python/infer/: demo.py  infer.py
image_classification_demo/shell/: CMakeLists.txt  build.sh  convert_to_raw_image.py  demo.cc  image_classification_demo.cc  run.sh  run_with_adb.sh  run_with_ssh.sh
keypoint_detection_demo/assets/datasets/test/: list.txt
keypoint_detection_demo/python/infer/: demo.py
keypoint_detection_demo/shell/: build.sh
libs/FastTokenizer/: README.md
model_test/python/infer/: infer.py
model_test/shell/: CMakeLists.txt  demo.cc  model_test.cc  run.sh  run_with_adb.sh  run_with_ssh.sh
object_detection_demo/assets/configs/: picodet_coco_416.txt  ssd_voc_300.txt  yolov3_coco_608.txt  yolov5s_voc_640.txt
object_detection_demo/assets/datasets/test/: list.txt
object_detection_demo/python/infer/: demo.py
object_detection_demo/shell/: CMakeLists.txt  build.sh  demo.cc  run.sh  run_with_adb.sh  run_with_ssh.sh
picodet_detection_demo/assets/images/: dog.raw
picodet_detection_demo/python/infer/: infer.py
picodet_detection_demo/shell/: CMakeLists.txt  convert_to_raw_image.py  draw_results_to_image.py  picodet_detection_demo.cc  run.sh  run_with_adb.sh  run_with_ssh.sh
semantic_segmentation_demo/assets/datasets/test/: list.txt
spoken_language_understanding_demo/assets/configs/: added_tokens.json  default.txt
spoken_language_understanding_demo/shell/: CMakeLists.txt  build.sh  demo.cc  run.sh  run_with_adb.sh  run_with_ssh.sh
ssd_detection_demo/assets/images/: dog.raw
ssd_detection_demo/python/infer/: infer.py
ssd_detection_demo/shell/: CMakeLists.txt  build.sh  convert_to_raw_image.py  draw_results_to_image.py  run.sh  run_with_adb.sh  run_with_ssh.sh  ssd_detection_demo.cc
tools/compile_scripts/: .gitignore  Dockerfile  build_and_run_all_demo.sh  build_and_run_unit_tests.sh  build_and_update_libs.sh  build_image_from_dockerfile.sh  create_and_publish_package.sh  download_and_update_sdk.sh  download_sdk.sh
tools/compile_scripts/docker/: Dockerfile  build_image.sh
tools/model_utilities/: README.md  change_pow_2_to_mul.py  change_var_name.py  create_model.py  fold_fill_constant_op.py  infer_model.py  insert_print_op.py  modify_model.py  split_model.py
yolo_detection_demo/python/infer/: infer.py
yolo_detection_demo/shell/: CMakeLists.txt  convert_to_raw_image.py  draw_results_to_image.py  run.sh  run_with_adb.sh  run_with_ssh.sh  yolo_detection_demo.cc
